Remove deprecated properties